vote-view: fix alignment in android

--- a/src/style.less
+++ b/src/style.less
@@ -14,8 +14,8 @@ h3, h4 {
 
 .candidate {
   display: flex;
-  width: calc(50% - 6px);
-  margin-bottom: 10px;
+  width: calc(50% - 10px);
+  margin: 0 5px 10px 5px;
   max-width: 300px;
 
   color: @textColor;
@@ -29,7 +29,7 @@ h3, h4 {
 
     &:checked ~ .candidate-card {
       opacity: 1;
-      box-shadow: 0 0 8px mediumpurple;
+      box-shadow: 0 0 5px mediumpurple;
       border-color: transparent;
     }
 
@@ -105,7 +105,9 @@ h3, h4 {
   overflow: hidden;
   justify-content: space-between;
   width: 100%;
-  padding-top: 10px;
+  padding-top: 5px;
+  margin-left: -5px;
+  margin-right: -5px;
 }
 
 .candidate-group {
